# BL-Ecom

./: .gitignore  README.md
client/: package-lock.json
client/src/: App.vue
client/src/components/: Counter.vue
client/src/views/: HomeView.vue
src/client/: .gitignore  README.md  index.html  package-lock.json  package.json
src/client/src/: App.vue  main.ts
src/client/src/api/products/: index.ts
src/client/src/assets/: base.css
src/client/src/components/: AppFooter.vue  AppNav.vue  BlogCard.vue  ProductCard.vue  Social.vue
src/client/src/pages/: AboutPage.vue  HomePage.vue
src/client/src/router/: index.ts
src/client/src/types/: blogs.ts  products.ts
src/client/src/utils/: index.ts
src/client/src/views/: HomeView.vue
src/server/: .gitignore  pyproject.toml  pytest.ini  requirements.txt
src/server/account/: admin.py  managers.py  models.py  serializers.py  signals.py
src/server/account/migrations/: 0001_initial.py
src/server/account/services/: user.py
src/server/account/tests/: tests.py
src/server/app/: backends.py  urls.py
src/server/app/api/: utils.py  views.py
src/server/app/auth/: __init__.py  constants.py  jwt_manager.py
src/server/app/errors/: error_codes.py  exceptions.py  rest_handlers.py  utils.py
src/server/app/tests/: tests.py
src/server/authentication/: jwt.py  serializers.py  urls.py  utils.py
src/server/authentication/api/: views.py
src/server/authentication/constants/: error_codes.py
src/server/authentication/tests/: tests.py
src/server/core/: settings.py  urls.py
src/server/utils/: helpers.py
(+17 files in other folders)
